# libcute

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  AGENT.md  CHANGELOG  CHANGELOG.md  README.md  cliff.toml  example.c  freestanding.txt  meson.build  meson_options.txt  nostd.txt  windows.txt
.cache/clangd/index/: 6502.c.213010BABDE6FAFD.idx  6502.h.929D85800B2AF1EA.idx  allocator.c.E4B592AA89A51B01.idx  allocator.h.C0C764E344F425D2.idx  arenaallocator.c.A3C9660967B985E9.idx  arenaallocator.h.000B433975DDB310.idx  bitmap.c.5DD8B9EC1A8BE825.idx  bitmap.h.ACB3FDE2650C48D5.idx  bitset.h.24DD233B2F96DFAA.idx  cute.h.9C03616E208FB558.idx  destructor.c.B11C9BEE91E592B8.idx  destructor.h.0EA10801A59C4DC1.idx  dir.c.6F9E53994C74C6FA.idx  dir.h.64329FF9E6B030B4.idx  dlist.c.F997B91655654BFC.idx  dlist.h.BE5BDD12BE3B3FA5.idx  error.c.640B7A166F1ECC00.idx  error.h.177495CA8C67C70E.idx  fd.h.A51BDC7DAC6C207A.idx  file.c.7D6A30EF5248852D.idx  file.h.C7FEB7644868F10B.idx  fixedallocator.c.077A42D0EEAB41A5.idx  fixedallocator.h.E55CC1030C9C68B5.idx  fmt.c.8C18D1D33B05B7AD.idx  fmt.h.F0CADF36008E4C5E.idx  gpallocator.c.2B3DDAD84CBD0EEE.idx  gpallocator.h.5573C6ACC61CD74D.idx  hash.c.AE1846687BA86B5D.idx  hash.h.E13A06984756993A.idx  hashmap.c.077C5972476439EF.idx  hashmap.h.F0591C5594882D5A.idx  http.c.4B691521EE4FD14C.idx  http.h.02E9FCF7DF808004.idx  list.c.7A605ADBE018A45B.idx  list.h.B5CF7F3DD1B7CE0B.idx  macro.h.5E513DC2D0A7ACDE.idx  main.c.B5164982E20357DC.idx  main.c.B9918F26543A33FA.idx  nostd.c.1D5CEE7DF4A66A1B.idx  nostd.h.5614AC123F89864A.idx  (+49 more)
.github/workflows/: docs.yaml
docs/: Doxyfile.in  gpa_memory_diagnosis.md  mainpage.md
docs/rfcs/: 0001-naming-conventions.md
examples/: meson.build
examples/6502/: 6502.c  6502.h  main.c  meson.build
examples/http/: http.c  http.h  main.c
examples/http_server/: http_server.c
include/: cute.h  macro.h  nostd.h  optional.h  result.h  slice.h  state.h  utility.h  wasm.h
include/collection/: bitmap.h  bitset.h  dlist.h  hashmap.h  list.h  ring_buffer.h  skip_list.h  vector.h
include/concurrency/: worker_pool.h
include/hash/: hash.h
include/io/: dir.h  error.h  fd.h  fdfile.h  file.h  fstream.h  memstream.h  span.h  stream.h
include/memory/: allocator.h  arenaallocator.h  fixedallocator.h  gpallocator.h  page.h  slab.h  wasmallocator.h
include/object/: bitset.h  destructor.h  optional.h  rc.h  result.h  slice.h
include/string/: fmt.h  nostd.h  string.h  utf8.h
include/worker/: pool.h
lib/: nostd.c  optional.c  slice.c  state.c  utility.c
lib/collection/: bitmap.c  dlist.c  hashmap.c  list.c  ring_buffer.c  skip_list.c  vector.c
lib/concurrency/: worker_pool.c
lib/hash/: hash.c
lib/io/: dir.c  error.c  fdfile.c  file.c  fstream.c  memstream.c  span.c
lib/memory/: allocator.c  arenaallocator.c  fixedallocator.c  gpalloactor.c  gpallocator.c  page.c  slab.c  wasmallocator.c
lib/object/: destructor.c  optional.c  slice.c
lib/string/: fmt.c  string.c  utf8.c
lib/worker/: pool.c
subprojects/: .gitignore
tests/: gpa_string_debug.c  meson.build  test_allocator.c  test_allocator.cpp  test_arena_allocator.c  test_arena_allocator.cpp  test_bitmap.c  test_bitmap.cpp  test_common.c  test_common.h  test_dir.c  test_dlist.c  test_dlist.cpp  test_fdfile.c  test_file.c  test_file.cpp  test_fixed_allocator.c  test_fixed_allocator.cpp  test_fmt.c  test_fmt.cpp  test_gpa.c  test_gpa.cpp  test_gpa_large.cpp  test_hash.c  test_hash.cpp  test_hashmap.c  test_hashmap.cpp  test_list.c  test_list.cpp  test_optional.c  test_optional.cpp  test_page_allocator.c  test_page_allocator.cpp  test_rc.c  test_rc.cpp  test_ring_buffer.c  test_ring_buffer.cpp  test_skip_list.c  test_skip_list.cpp  test_skip_list_sst.c  (+11 more)
